Convert yonix from ignore to Git submodule

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 # Ignore config files that contain unique information for each machine
 config.nix
 .nix-dir
-
-# https://github.com/REALalphas/yonix
-yonix
+testing
